# pyareas

./: README.md  pyproject.toml
src/: __init__.py  pyareas.py
src/pyareas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
