[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyareas"
version = "0.0.5"
authors = [
  { name="TomTheCodingGuy", email="tomb80940@gmail.com" },
]
description = "Python package for areas"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TomTheCodingGuy/pyareas"
"Bug Tracker" = "https://github.com/TomTheCodingGuy/pyareas/issues"
